--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sms_autofill
 description: Flutter plugin to provide SMS code autofill support
-version: 2.2.0
+version: 2.2.0+1
 homepage: https://github.com/jaumard/sms_autofill
 
 environment:
